# powerfx-rust

./: Cargo.toml  LICENSE.md  readme.md
examples/: add.rs  average.rs  custom_function.rs  filter.rs  readme.md  variables.rs
src/: ast.rs  engine.rs  evaluator.rs  function_registry.rs  functions.rs  lexer.rs  lib.rs  main.rs  models.rs
src/functions/: aggregation.rs  context.rs  logical.rs  math.rs  mod.rs  table.rs  text.rs
src/tests/: mod.rs
