[package]
name = "powerfx"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embedded PowerFX interpreter."
repository = "https://github.com/danielgerlag/powerfx-rust"
keywords = ["PowereFx"]
categories = ["parsing"]
readme = "readme.md" 

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
peg = "0.8.1"
time = "0.3.28"
tokio = { version = "1.30.0", features = ["full"] }

[dev-dependencies]
maplit = "1.0"